--- a/feedback/templates/single_feedback.html
+++ b/feedback/templates/single_feedback.html
@@ -19,7 +19,7 @@
       <form class="" method="post">
         {% csrf_token %}
         <div class="form-group">
-          <textarea rows="3" name="feedback" id="feedback" placeholder="Your reply ({% if not anonymous %}non-{% endif %}anonymous)"></textarea>
+          <textarea rows="3" class="form-control" name="feedback" id="feedback" placeholder="Your reply ({% if not anonymous %}non-{% endif %}anonymous)"></textarea>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-primary">Reply</button>
