--- a/feedback/templates/single_feedback.html
+++ b/feedback/templates/single_feedback.html
@@ -9,6 +9,9 @@
 {% endif %}
 <div class="row">
   <div class="col-md-12">
+    {% if feedbacks.0.question %}
+    <h2>{{ feedbacks.0.question }}</h2>
+    {% endif %}
     {% for feedback in feedbacks %}
       <blockquote class="{% if feedback.sender == slack_user %}blockquote-reverse{% endif %}">
         <p>{{ feedback.feedback }}</p>
