--- a/feedback/templates/base.html
+++ b/feedback/templates/base.html
@@ -47,6 +47,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{% url "new_feedback" %}">Give feedback</a></li>
+            <li><a href="{% url "sent_feedback" %}">Sent</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% if slack_user %}{% if slack_user.image_24 %}<img src="{{ slack_user.image_24 }}"> {% endif %}{{ slack_user.real_name }}{% else %}Profile{% endif %} <span class="caret"></span></a>
               <ul class="dropdown-menu">
