Unify blockquotes. Improve formatting & show +1 and -1 feedbacks

--- a/feedback/templates/base.html
+++ b/feedback/templates/base.html
@@ -29,6 +29,11 @@
     <script src="/static/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap-tokenfield.js" charset="UTF-8"></script>
     <script type="text/javascript" src="/static/js/typeahead.bundle.min.js" charset="UTF-8"></script>
+    <script type="text/javascript">
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    });
+    </script>
     {% block head %}{% endblock %}
   </head>
 
