Fix static links

--- a/feedback/templates/base.html
+++ b/feedback/templates/base.html
@@ -16,18 +16,18 @@
      <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
      <!-- jQuery UI CSS -->
      <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" type="text/css" rel="stylesheet">
-    <link href="{% static "css/jumbotron-narrow.css"}" rel="stylesheet">
-    <link href="{% static "css/tokenfield-typeahead.css"}" rel="stylesheet">
-    <link href="{% static "css/bootstrap-tokenfield.css"}" type="text/css" rel="stylesheet">
-    <link href="{% static "css/typeahead.css"}" type="text/css" rel="stylesheet">
-    <link href="{% static "css/custom.css"}" type="text/css" rel="stylesheet">
+    <link href="{% static "css/jumbotron-narrow.css" %}" rel="stylesheet">
+    <link href="{% static "css/tokenfield-typeahead.css" %}" rel="stylesheet">
+    <link href="{% static "css/bootstrap-tokenfield.css" %}" type="text/css" rel="stylesheet">
+    <link href="{% static "css/typeahead.css" %}" type="text/css" rel="stylesheet">
+    <link href="{% static "css/custom.css" %}" type="text/css" rel="stylesheet">
 
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <script src="{% static "js/bootstrap.min.js"}"></script>
-    <script type="text/javascript" src="{% static "js/bootstrap-tokenfield.js"}" charset="UTF-8"></script>
-    <script type="text/javascript" src="{% static "js/typeahead.bundle.min.js"}" charset="UTF-8"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/bootstrap-tokenfield.js" %}" charset="UTF-8"></script>
+    <script type="text/javascript" src="{% static "js/typeahead.bundle.min.js" %}" charset="UTF-8"></script>
     <script type="text/javascript">
     $(function () {
       $('[data-toggle="tooltip"]').tooltip()
