Fix action buttons on feedback page

--- a/feedback/templates/single_feedback.html
+++ b/feedback/templates/single_feedback.html
@@ -9,7 +9,7 @@
   </div>
 </div>
 {% endif %}
-{% if not feedbacks.0.delivered %}
+{% if not feedbacks.0.delivered_at %}
 <div class="row">
   <div class="col-md-12">
     <form method="post" class="form-inline">
